<resources>
    <string name="search_content_description" translatable="false">Content Description</string>

    <string name="cn_app_expires_tomorrow">Expires tomorrow</string>
    <string name="cn_app_expires_today">Expires today</string>
    <string name="cn_app_verified">Verified</string>

    <string name="cn_app_go_to_shop">Go to shop</string>
    <string name="cn_app_no_code_for_this_deal">No code for this deal</string>
    <string name="cn_app_did_it_work">Did it work?</string>
    <string name="cn_app_notifications">Notifications</string>
    <string name="cn_app_settings">" Settings"</string>
    <string name="cn_app_favorites">" Favorites"</string>

    <string name="cn_app_myretailers_settings_title">Coupons for my stores</string>
    <string name="cn_app_myretailers_settings_text">We notify you of the best offers for the retailer apps or websites you are using.</string>
    <string name="cn_app_bookmarks_notification_title">Expiring Coupons</string>
    <string name="cn_app_bookmarks_notification_text">We will alert you when the coupons you saved will be about to expire</string>
    <string name="cn_app_push_retailers_title">Promotional notifications</string>
    <string name="cn_app_push_retailers_text">From time to time, we will tell you about the best offers according to your interests.</string>
    <string name="cn_app_retailers_settings_title">Automatic notifications (new codes)</string>
    <string name="cn_app_retailers_settings_all">All stores</string>
    <string name="cn_app_automatic_notifications">Automatic Notifications</string>
    <string name="cn_app_automatic_all_notifications_on">"ON    >"</string>
    <string name="cn_app_automatic_all_notifications_off">"OFF    >"</string>
    <string name="cn_app_country">Country</string>

    <string name="cn_app_notification_codes">We have %1$s codes for %2$s</string>
    <string name="cn_app_search_bar">Search coupons</string>
    <string name="cn_app_search_favs">SEARCH</string>
    <string name="cn_app_favs_allbrands_title">ALL BRANDS</string>
    <string name="cn_app_favs_mybrands_title">MY STORES</string>
    <string name="cn_app_favs_popular_title">POPULAR</string>
    <string name="cn_app_favs_popular_subtitle">Check out these popular brands</string>
    <string name="cn_app_notification_default5">Add a few retailers to receive notifications or just go shopping, we\'ll let you know if we have codes for these shops</string>
    <string name="cn_app_notification_default6">Add a few retailers to receive notifications</string>
    <string name="cn_app_seemore">See more</string>
    <string name="cn_app_add_retailer_HS">Add a store</string>
    <string name="cn_app_notification_expired">Expired</string>

    <!-- not defined -->
    <string name="cn_app_copy_code">Copy code</string>
    <string name="cn_app_expire_in_days">Expires in %s days</string>

    <string name="cn_app_expire_in_month">Expires in a month</string>
    <string name="cn_app_expire_in_months">Expires in %s months</string>

    <string name="cn_app_settings_my_retailer_alert">Keep these notifications active if you want to receive discounts while shopping</string>
    <string name="cn_app_settings_alert_ok">OK</string>
    <string name="cn_app_settings_alert_cancel">Cancel</string>
    <string name="cn_app_copy_and_go_to_shop">Copy and go to shop</string>
    <string name="cn_app_likes">" %s likes"</string>
    <string name="cn_app_loading_message">Loading …</string>
    <string name="cn_app_your_loved_ones">Please select a few retailers</string>
    <string name="cn_app_retailers_added">Your selected retailers (%s)</string>

    <string name="cn_app_onboarding_done">Done</string>
    <string name="cn_app_vote_message">Thank you for your vote</string>
    <string name="cn_app_retailer_added">Retailer added to favourites</string>
    <string name="cn_app_retailer_removed">Retailer removed from favourites</string>
    <string name="cn_app_code">CODE</string>
    <string name="cn_app_deal">DEAL</string>

    <string name="cn_share_label" translatable="false">Coupons</string>

    <string name="cn_app_terms_and_conditions">User terms and conditions</string>
    <string name="cn_app_no_cupons_found">No store found! Please try again or select a suggested store.</string>

    <string name="cn_app_try_again">Try Again</string>
    <string name="cn_app_loading_error">Something went wrong while loading the stores, please try again.</string>
    <string name="cn_app_check_your_connection">Please check your internet connection.</string>
    <string name="cn_app_onboarding">Onboarding</string>

    <string name="cn_app_opening_shop">Opening the shop</string>
    <string name="cn_app_code_copied">Code copied, opening the shop</string>

    <string name="cn_app_banner_1">Tap the menu icon while shopping on the web</string>
    <string name="cn_app_banner_2">Then tap the share button</string>
    <string name="cn_app_banner_3">"Finally, tap the %s logo"</string>

    <string name="cn_app_banner_1_android5">Ne perdez plus de temps à chercher des coupons</string>
    <string name="cn_app_banner_2_android5">Nous trouvons automatiquement des coupons pour vous</string>
    <string name="cn_app_banner_3_android5">Lorsque vous visitez un magasin en ligne, nous vous avertirons dès que des coupons sont disponibles via une notification.</string>


    <string name="cn_app_share_and_save">Share \u0026 save!</string>

    <string name="cn_app_share_text">"Check out this coupon I have found. "</string>
    <string name="cn_app_share">Share</string>

    <string name="cn_app_create">Create alert</string>
    <string name="cn_app_done">Done</string>
    <string name="cn_app_alert_added_for">"Alert added for "</string>
    <string name="cn_app_no_alerts_added">No alerts added</string>
    <string name="cn_app_one_alerts_added">1 alert added</string>
    <string name="cn_app_more_alerts_added">" alert added"</string>

    <string name="categories">CATEGORIES</string>

    <string name="cn_app_save_even_more">Save even more</string>
    <string name="cn_app_add_more_stores">Add more stores</string>

    <string name="cn_app_unique_code_not_available">No more codes available, try again later</string>

    <string name="cn_app_erased">Erased</string>
    <string name="cn_app_undo">UNDO</string>
    <string name="cn_app_no_boomarks_message">Tap that icon to save a deal or a code.</string>
    <string name="cn_app_no_boomarks_button">Back to homescreen</string>

    <string name="cn_app_copy_and_go">Copy \u0026 Go</string>
    <string name="cn_app_to_the_shop">To the shop</string>

    <string name="cn_app_code_removed">Voucher removed</string>
    <string name="cn_app_deal_removed">Voucher removed</string>
    <string name="cn_app_voucher_added">Voucher added</string>

    <string name="cn_app_expire_hours">%s hours</string>
    <string name="cn_app_expire_code_notiffication">"Your code for %s expires in "</string>
    <string name="cn_app_expire_deal_notiffication">"Your deal for %s expires in "</string>

    <string name="cn_app_expire_code_no_voucher">Sorry, this code expired, visit this store again to look at more offers</string>
    <string name="cn_app_expire_deal_no_voucher">Sorry, this deal expired, visit this store again to look at more offers</string>

    <string name="cn_app_notification_new_coupons">" New vouchers"</string>
    <string name="cn_app_options_btn">Options</string>

    <string name="cn_app_rate_dialog_title">Enjoying %s ?</string>
    <string name="cn_app_rate_dialog_message">If you like our app,\n please take a moment to rate it.</string>
    <string name="cn_app_rate_dialog_btn_rate_app">Rate app</string>
    <string name="cn_app_rate_dialog_btn_no_thanks">No, thanks</string>
    <string name="cn_app_rate_dialog_btn_maybe_later">Maybe Later</string>

    <string name="bookmark_tooltip">Save a voucher privately.</string>
    <string name="cn_app_bookmarked">Bookmarked</string>
    <string name="cn_app_bookmark">Bookmark</string>

    <string name="cn_app_top_code_category">"All codes for "</string>
    
    <string name="cn_app_onboard_select_few_retailers_welcome">Welcome!</string>
    <string name="cn_app_onboard_select_few_retailers">Select a few stores above so that we can give you the best discount codes.</string>
    <string name="cn_app_onboard_selected_number">You selected %s stores</string>
    <string name="cn_app_onboard_heart_tooltip">Tap the heart to like a retailer</string>
    <string name="cn_app_done_button_tooltip">Tap here when you\'re ready!</string>
    <string name="cn_app_home_voucher_tooltip">Tap to view an offer</string>

    <string name="cn_app_expired">Expired</string>
    <string name="cn_app_code_expired">This code has expired</string>
    
    <string name="cn_app_new_tag">NEW</string>
    <dimen name="new_tag_font_size">12sp</dimen>

    <string name="cn_app_install_full_app">INSTALL</string>

    <string name="cn_app_share_email">E-Mail</string>
    <string name="cn_app_share_whatsapp">Whatsapp</string>
    <string name="cn_app_share_fb">Messenger</string>

    <!--icons-->
    <string name="category_icon_animaux" translatable="false">A</string>
    <string name="category_icon_autres" translatable="false">X</string>
    <string name="category_icon_beaute" translatable="false">u</string>
    <string name="category_icon_chaussures" translatable="false">z</string>
    <string name="category_icon_electronique" translatable="false">Q</string>
    <string name="category_icon_etudiant" translatable="false">E</string>
    <string name="category_icon_finance" translatable="false">s</string>
    <string name="category_icon_fleurs" translatable="false">x</string>
    <string name="category_icon_livres" translatable="false">o</string>
    <string name="category_icon_loisirs" translatable="false">w</string>
    <string name="category_icon_maison" translatable="false">b</string>
    <string name="category_icon_mode" translatable="false">r</string>
    <string name="category_icon_restauration" translatable="false">C</string>
    <string name="category_icon_shopping" translatable="false">></string>
    <string name="category_icon_sport" translatable="false">y</string>
    <string name="category_icon_voyages" translatable="false">D</string>
    <string name="category_icon_enfants" translatable="false">v</string>
    <string name="category_icon_photographie" translatable="false">B</string>

    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://www.cuponation.es\",\n  }\n}]</string>

    <string name="channel_description">\"Notification\"</string>
    <string name="channel_name">\"Notification\"</string>

</resources>
