<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/cn_app_rate_dialog_message"
        android:textColor="@color/text_color_dark_gray"
        android:layout_margin="16dp"
        android:layout_marginTop="0dp"
        android:textSize="18dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:id="@+id/btn_no_thanks"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cn_app_settings_alert_ok"
            android:textAllCaps="false"
            android:textColor="@color/text_color_light_gray"
            android:textSize="@dimen/rate_dialog_btn_text_size"
            android:gravity="bottom|center_horizontal"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_maybe_later"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cn_app_rate_dialog_btn_maybe_later"
            android:textAllCaps="false"
            android:textColor="@color/text_color_light_gray"
            android:gravity="bottom|center_horizontal"
            android:textSize="@dimen/rate_dialog_btn_text_size"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:id="@+id/btn_rate_app"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cn_app_rate_dialog_btn_rate_app"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/rate_dialog_btn_text_size"
            android:gravity="bottom|center_horizontal"/>

    </LinearLayout>
</LinearLayout>