<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/share_mail"
        style="@style/ShareOptionsHolder">

        <ImageView

            style="@style/ShareOptions"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_email" />

        <TextView
            style="@style/ShareTitle"
            android:text="@string/cn_app_share_email" />
    </LinearLayout>

    <View style="@style/ShareOptionsVerticalSeparator" />

    <LinearLayout
        android:id="@+id/share_option2"
        style="@style/ShareOptionsHolder">

        <ImageView

            style="@style/ShareOptions"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_whatsapp" />

        <TextView
            style="@style/ShareTitle"
            android:text="@string/cn_app_share_whatsapp" />
    </LinearLayout>

    <View style="@style/ShareOptionsVerticalSeparator" />

    <LinearLayout
        android:id="@+id/share_option3"
        style="@style/ShareOptionsHolder">

        <ImageView

            style="@style/ShareOptions"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_messenger" />

        <TextView
            style="@style/ShareTitle"
            android:text="@string/cn_app_share_fb" />
    </LinearLayout>

    <View style="@style/ShareOptionsVerticalSeparator" />

    <ImageView
        android:id="@+id/share_more"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:tint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_meatballs" />

</LinearLayout>