<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/main_header"
        layout="@layout/screens_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/all_brands"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cn_app_favs_allbrands_title"
            android:textAllCaps="true"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/brands_top_bar_text_size" />

        <TextView
            android:id="@+id/my_brands"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cn_app_favs_mybrands_title"
            android:textAllCaps="true"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/brands_top_bar_text_size" />

        <TextView
            android:id="@+id/popular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cn_app_favs_popular_title"
            android:textAllCaps="true"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/brands_top_bar_text_size" />


    </LinearLayout>

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <FrameLayout
        android:id="@+id/brands_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>