<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/main_header"
        layout="@layout/screens_header" />

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/cn_app_notifications"
            android:textColor="@color/text_color_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/notif_create_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cn_app_create"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dbdbdb" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/notifications_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:visibility="visible" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:ignore="UselessLeaf" />

        <LinearLayout
            android:id="@+id/no_notification_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/to_favorite_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/no_notification_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/cn_app_notification_default5"
                    android:textColor="@color/text_color_dark"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <include
            layout="@layout/view_retailer_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>